[FIX] gym service 문법 수정